# dzgtp-py

./: README.md  pyproject.toml
src/DanZhu/GTP/: engine.py  interpreter.py
tests/: test_interpreter.py  test_package.py
tests/DanZhu/GTP/: test_engine.py  test_interpreter.py
