[project]
name = "dzgtp-py"
version = "0.1.0"
description = "A Python implementation of the GTP (Go Text Protocol) engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-q"
